metadata/force-app/main/default/objects/Account/fields/Bynder_indemnifies_third_party_claims__c.field-meta.xml
<CustomField>
    <fullName>Bynder_indemnifies_third_party_claims__c</fullName>
    <label>Indemnification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not in agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>