metadata/force-app/main/default/objects/Account/fields/Bynder_Support_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Support_Opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field set by customer portal administrator in portal. Synced from Bynder.</description>
    <inlineHelpText>Field set by customer portal administrator in portal. Synced from Bynder.</inlineHelpText>
    <label>Bynder Support Opt-in</label>
    <type>Checkbox</type>
</CustomField>