metadata/force-app/main/default/objects/Account/fields/Bynder_Template__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Template__c</fullName>
    <description>Are we working or Bynder’s or Customer’s contract template(s)?</description>
    <inlineHelpText>Are we working or Bynder’s or Customer’s contract template(s)?</inlineHelpText>
    <label>Contract Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bynder</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>