metadata/force-app/main/default/objects/Account/fields/Bynder_Wizard_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Bynder_Wizard_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Portal has Bynder Wizard Enabled</description>
    <label>Bynder Wizard Enabled</label>
    <type>Checkbox</type>
</CustomField>