metadata/force-app/main/default/objects/Account/fields/CAC_Customer_onboarded__c.field-meta.xml
<CustomField>
    <fullName>CAC_Customer_onboarded__c</fullName>
    <label>CAC - Customer onboarded</label>
    <summarizedField>Opportunity.Startdate_contract__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>