metadata/force-app/main/default/objects/Account/fields/Cap_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cap_Indexation_Rate__c</fullName>
    <description>Used to store the cap % of the variable indexation rate agreed with the customer.</description>
    <inlineHelpText>If the variable indexation rate is greater than the Cap Indexation rate agreed with the customer, Cap Indexation % will be used as current indexation rate for calculating indexation on the orders.</inlineHelpText>
    <label>Cap Indexation Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>