metadata/force-app/main/default/objects/Account/fields/Cap_on_liability__c.field-meta.xml
<CustomField>
    <fullName>Cap_on_liability__c</fullName>
    <label>Cap on liability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in agreement</fullName>
            </value>
            <value>
                <fullName>v11limited to 12 months of license fees or €5000. Indirect damages excluded</fullName>
            </value>
            <value>
                <fullName>v12 (including for indemnities) limited to 12 months of license fees, except where must be unlimited by law. Indirect damages excluded.</fullName>
            </value>
            <value>
                <fullName>v13 limited to the total amount of Subscription Fee (excluding VAT) owed under this Agreement for the twelve (12) month period immediately preceding the final event giving rise to such liability. Indirect damages excluded</fullName>
            </value>
            <value>
                <fullName>Other. Cap negotiated by customer</fullName>
            </value>
            <value>
                <fullName>v.14 limited to the Subscription Fee payable by Customer to Bynder in the twelve months prior to the event giving rise to the claim. Indirect damages excluded.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>