metadata/force-app/main/default/objects/Account/fields/Case_Study_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Request_Date__c</fullName>
    <label>Case Study Request Date</label>
    <type>Date</type>
</CustomField>