metadata/force-app/main/default/objects/Account/fields/cbit_Clearbit_Domain__c.field-meta.xml
<CustomField>
    <fullName>cbit_Clearbit_Domain__c</fullName>
    <description>BODEV-2808 Clearbit Enrich - Field Creation</description>
    <label>Clearbit Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>