metadata/force-app/main/default/objects/Account/fields/cbit_Clearbit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>cbit_Clearbit_Timestamp__c</fullName>
    <description>BODEV-2808 Clearbit Enrich - Field Creation</description>
    <label>Clearbit Timestamp</label>
    <type>DateTime</type>
</CustomField>