metadata/force-app/main/default/objects/Account/fields/cbit_marketcap_c__c.field-meta.xml
<CustomField>
    <fullName>cbit_marketcap_c__c</fullName>
    <label>Market Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>