metadata/force-app/main/default/objects/Account/fields/cbit_stockstymbol_c__c.field-meta.xml
<CustomField>
    <fullName>cbit_stockstymbol_c__c</fullName>
    <label>Stock Symbol</label>
    <length>15</length>
    <type>Text</type>
</CustomField>