metadata/force-app/main/default/objects/Account/fields/Certification_Stage__c.field-meta.xml
<CustomField>
    <fullName>Certification_Stage__c</fullName>
    <description>BODEV-4335 DoA Refinement - Build: Partner Attributes</description>
    <inlineHelpText>Used by the Partner Success Team to track where a Partner is in the Certification process. A Partner in the stage Implementation Expert, Growth/Adoption Partner, or Strategic Solution Partner is considered Certified.</inlineHelpText>
    <label>Certification Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Certified Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Trained</fullName>
            </value>
            <value>
                <fullName>Implementation Expert</fullName>
            </value>
            <value>
                <fullName>Growth/Adoption Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Service Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>