metadata/force-app/main/default/objects/Account/fields/Change_of_Control__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Control__c</fullName>
    <description>BODEV-4222 SF - QW - Legal Fields Optimisation</description>
    <label>Change of Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, in favour of direct competitior</fullName>
            </value>
            <value>
                <fullName>Yes, other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>