metadata/force-app/main/default/objects/Account/fields/Clearbit_Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Annual_Revenue_Range__c</fullName>
    <description>BO-2220 Additional revenue fields on the Lead and Account objects</description>
    <label>Clearbit Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clearbit_Annual_Revenue_Range</valueSetName>
    </valueSet>
</CustomField>