metadata/force-app/main/default/objects/Account/fields/Comments_Liability_Clause__c.field-meta.xml
<CustomField>
    <fullName>Comments_Liability_Clause__c</fullName>
    <label>Comments: Liability Clause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>