metadata/force-app/main/default/objects/Account/fields/Comments_Other_Clauses__c.field-meta.xml
<CustomField>
    <fullName>Comments_Other_Clauses__c</fullName>
    <label>Comments: Other Clauses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>