metadata/force-app/main/default/objects/Account/fields/Comments_Service_Level_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Comments_Service_Level_Agreement__c</fullName>
    <label>Comments: Service Level Agreement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>