metadata/force-app/main/default/objects/Account/fields/Comments_Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Comments_Travel_Expenses__c</fullName>
    <label>Comments Finance / Travel Expenses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>