metadata/force-app/main/default/objects/Account/fields/Commercial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Commercial Contact)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>