metadata/force-app/main/default/objects/Account/fields/Comms_Language__c.field-meta.xml
<CustomField>
    <fullName>Comms_Language__c</fullName>
    <description>Language used for customer communication</description>
    <inlineHelpText>Language used for customer communication</inlineHelpText>
    <label>Comms Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>