metadata/force-app/main/default/objects/Account/fields/Company_Logo__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo__c</fullName>
    <description>BO-1808 Company Logo field on Account</description>
    <label>Company Logo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>