metadata/force-app/main/default/objects/Account/fields/Company_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue__c</fullName>
    <inlineHelpText>Company annual revenue enriched by Clearbit. NOTE: if the company is not publicly listed, Clearbit provides an annual revenue estimate.</inlineHelpText>
    <label>Company Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>