metadata/force-app/main/default/objects/Account/fields/Company_Size_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Grouped__c</fullName>
    <description>GK: changed Micro resulting in Small, previously was Micro, BODEV-4034</description>
    <formula>CASE( Company_Size_New__c ,
&quot;Micro&quot;, &quot;Small&quot;, 
&quot;SMB&quot;, &quot;Small&quot;,
&quot;Mid-Market&quot;, &quot;Small&quot;,
&quot;MM - Small&quot;, &quot;Small&quot;,
&quot;MM - Large&quot;, &quot;Large&quot;,
&quot;Enterprise&quot;, &quot;Large&quot;,
&quot;Strategic&quot;, &quot;Large&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Size Grouped</label>
    <type>Text</type>
</CustomField>