metadata/force-app/main/default/objects/Account/fields/Content_Management_Solution__c.field-meta.xml
<CustomField>
    <fullName>Content_Management_Solution__c</fullName>
    <label>Content Management Solution</label>
    <length>15</length>
    <type>Text</type>
</CustomField>