metadata/force-app/main/default/objects/Account/fields/Content_Management_Solution_CMS__c.field-meta.xml
<CustomField>
    <fullName>Content_Management_Solution_CMS__c</fullName>
    <label>Content Management Solution (CMS)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WordPress</fullName>
            </value>
            <value>
                <fullName>Drupal</fullName>
            </value>
            <value>
                <fullName>Drupal 8</fullName>
            </value>
            <value>
                <fullName>Sitecore</fullName>
            </value>
            <value>
                <fullName>Adobe AEM (Adobe Experience Manager)</fullName>
            </value>
            <value>
                <fullName>Adobe Scene7</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Ektron</fullName>
            </value>
            <value>
                <fullName>Omniupdate</fullName>
            </value>
            <value>
                <fullName>Craft CMS</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>dotCMS</fullName>
            </value>
            <value>
                <fullName>Sitefinity</fullName>
            </value>
            <value>
                <fullName>SiteExecutive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Kentico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>