metadata/force-app/main/default/objects/Account/fields/Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Comments__c</fullName>
    <label>Comments: Contract</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>