metadata/force-app/main/default/objects/Account/fields/Contract_has_unscoped_users__c.field-meta.xml
<CustomField>
    <fullName>Contract_has_unscoped_users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://docs.google.com/spreadsheets/d/1dUdw3YKe2bs_DKdAdo9aElgPPxtkqE0JHqMvTrhXYps/edit?usp=sharing</description>
    <inlineHelpText>When this box is checked, the account has unscoped users in the active contract</inlineHelpText>
    <label>Contract has unscoped users</label>
    <type>Checkbox</type>
</CustomField>