metadata/force-app/main/default/objects/Account/fields/Contracted_ARR__c.field-meta.xml
<CustomField>
    <fullName>Contracted_ARR__c</fullName>
    <description>Used to store the sum of ARR on active contracts and open renewals.</description>
    <label>Contracted ARR</label>
    <summarizedField>Opportunity.ARR_Reports__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Counted_for_Contracted_ARR__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>