metadata/force-app/main/default/objects/Account/fields/Contracted_ARR_EUR__c.field-meta.xml
<CustomField>
    <fullName>Contracted_ARR_EUR__c</fullName>
    <description>Used to store the Contracted ARR converted in EUR</description>
    <formula>Contracted_ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted ARR (EUR)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>