metadata/force-app/main/default/objects/Account/fields/Created_by_tool__c.field-meta.xml
<CustomField>
    <fullName>Created_by_tool__c</fullName>
    <description>BODEV-3558 : Used to identify the tool creating the account mainly if the account is created by external applications.</description>
    <label>Created by tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>