metadata/force-app/main/default/objects/Account/fields/Credit_Control_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Control_Reminder_Email__c</fullName>
    <description>Email address used in NetSuite to send credit control reminders. Synced from Salesforce to NetSuite via Tray.io</description>
    <inlineHelpText>Email address for credit control reminders.</inlineHelpText>
    <label>Accounts Payable Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>