metadata/force-app/main/default/objects/Account/fields/CRMGAC__Completed_Events__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Completed_Events__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completed Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>