metadata/force-app/main/default/objects/Account/fields/CRMGAC__Overall_Count1__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Overall_Count1__c</fullName>
    <inlineHelpText>This field works with the Activity Counter, enabling you to aggregate values already populated Placeholder1 field of Account/Contact/Opportunity.</inlineHelpText>
    <label>Overall Count1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>