metadata/force-app/main/default/objects/Account/fields/CRMGAC__Placeholder3__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Placeholder3__c</fullName>
    <label>Placeholder3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>