metadata/force-app/main/default/objects/Account/fields/CRMGAC__Total_Closed_Tasks_Overall__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Total_Closed_Tasks_Overall__c</fullName>
    <inlineHelpText>This field works with the Activity Counter, enabling you to aggregate All Closed Tasks across all objects related to Accounts, even the task is missing the whatid.</inlineHelpText>
    <label>Total Closed Tasks (Overall)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>