metadata/force-app/main/default/objects/Account/fields/CRMGAC__Total_Event_Duration_Overall__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Total_Event_Duration_Overall__c</fullName>
    <inlineHelpText>This field works with the Activity Counter, enabling you to aggregate Event Duration across all objects related to Accounts, even the event is missing the whatid.</inlineHelpText>
    <label>Total Event Duration (Overall)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>