metadata/force-app/main/default/objects/Account/fields/CRMGAC__Upcoming_Events_Overall__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Upcoming_Events_Overall__c</fullName>
    <inlineHelpText>This field works with the Activity Counter, enabling you to aggregate Upcoming Events across all objects related to Accounts, even the event is missing the whatid.</inlineHelpText>
    <label>Upcoming Events (Overall)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>