metadata/force-app/main/default/objects/Account/fields/CSM_Active__c.field-meta.xml
<CustomField>
    <fullName>CSM_Active__c</fullName>
    <formula>CSM_Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Active</label>
    <type>Checkbox</type>
</CustomField>