metadata/force-app/main/default/objects/Account/fields/CSM_name_in_text__c.field-meta.xml
<CustomField>
    <fullName>CSM_name_in_text__c</fullName>
    <description>Used in the Salesforce -&gt; Zendesk Integration</description>
    <formula>CSM_Owner__r.FirstName&amp;&quot; &quot;&amp;CSM_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM name in text</label>
    <type>Text</type>
</CustomField>