metadata/force-app/main/default/objects/Account/fields/CSM_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_Email__c</fullName>
    <formula>CSM_Owner__r.Email</formula>
    <label>CSM Owner Email</label>
    <type>Text</type>
</CustomField>