metadata/force-app/main/default/objects/Account/fields/CSM_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_Manager__c</fullName>
    <description>BODEV-3803 Create CSM Owner Manager Field on Account</description>
    <formula>CSM_Owner__r.Manager_Name__c</formula>
    <label>CSM Owner Manager (Deprecated)</label>
    <type>Text</type>
</CustomField>