metadata/force-app/main/default/objects/Account/fields/CSM_Owner_Office__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_Office__c</fullName>
    <formula>TEXT(CSM_Owner__r.Work_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Owner Office</label>
    <type>Text</type>
</CustomField>