metadata/force-app/main/default/objects/Account/fields/CSM_Owner_Office_Grouped__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner_Office_Grouped__c</fullName>
    <description>BODEV-1691: Region of CSM Owner&apos;s Work Location.</description>
    <formula>IF( ISBLANK( CSM_Owner__c ), &quot;&quot;,
  CASE( TEXT( CSM_Owner__r.Work_Location__c ),
    &quot;Boston&quot;, &quot;US&quot;,
    &quot;San Carlos&quot;, &quot;US&quot;,
    &quot;Amsterdam&quot;, &quot;EMEA&quot;,
    &quot;London&quot;, &quot;EMEA&quot;,
    &quot;Dubai&quot;, &quot;EMEA&quot;,
    &quot;Melbourne&quot;, &quot;APAC&quot;,
    &quot;&quot;
  )
)</formula>
    <label>CSM Owner Office Grouped</label>
    <type>Text</type>
</CustomField>