metadata/force-app/main/default/objects/Account/fields/Cumulative_Indexation__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Indexation__c</fullName>
    <label>Cumulative Indexation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>