metadata/force-app/main/default/objects/Account/fields/Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR__c</fullName>
    <formula>Current_MRR_Number__c   * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>