metadata/force-app/main/default/objects/Account/fields/Current_ARR_Converted__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR_Converted__c</fullName>
    <description>BODEV-588. Returns the value of the field Current ARR in EUR. Used for the Zendesk integration.
Updated the field type from Currency to Number for catalyst integration.</description>
    <formula>Current_ARR__c  / CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zendesk - Current ARR (Converted)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>