metadata/force-app/main/default/objects/Account/fields/Current_Contract_End_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_End_Date_New__c</fullName>
    <description>Field feeds the current contract end date through the process builder</description>
    <label>Current Contract End Date</label>
    <summarizedField>Opportunity.End_date_contract__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Contract_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>