metadata/force-app/main/default/objects/Account/fields/Current_Contract_Start_Date_new__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Start_Date_new__c</fullName>
    <description>This field feeds the Current Contract Start Date field through the process builder</description>
    <label>Current Contract Start Date</label>
    <summarizedField>Opportunity.Startdate_contract__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Contract_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>notEqual</operation>
        <value>Existing Business-Upsell</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>