metadata/force-app/main/default/objects/Account/fields/Current_Indexation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Indexation_Rate__c</fullName>
    <description>Used to store the current indexation rate of the subsidiary associated with the account</description>
    <formula>IF(ISPICKVAL(Indexation_Type__c,&apos;Variable&apos;),Subsidiary_lookup__r.Current_Avg_Indexation_Rate__c,null)</formula>
    <inlineHelpText>Variable indexation rate used in calculating indexation on orders activated in the current year.</inlineHelpText>
    <label>Current Year Variable Indexation Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>