metadata/force-app/main/default/objects/Account/fields/Current_MRR_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_MRR_Number__c</fullName>
    <label>Current MRR (Number)</label>
    <summarizedField>Opportunity.MRR_number__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.MRR__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Contract_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>