metadata/force-app/main/default/objects/Account/fields/Current_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal_Opportunity__c</fullName>
    <label>Current Renewal Opportunity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>